--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
+    compile 'com.github.ybq:Android-SpinKit:1.1.0'
     // https://mvnrepository.com/artifact/org.apache.httpcomponents/httpmime
     //compile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.0-alpha3'
     testCompile 'junit:junit:4.12'
